# packedtime-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.cargo/: config
.github/workflows/: bench.yml  ci.yml
benches/: bench_date_add.rs  bench_date_trunc.rs  bench_format.rs  bench_parse.rs
src/: convert.rs  date.rs  datetime.rs  epoch_days.rs  error.rs  format.rs  kernels.rs  lib.rs  packed.rs  parse.rs  util.rs
