[package]
name = "packedtime-rs"
authors = ["Jörn Horstmann <git@jhorstmann.net>"]
version = "0.1.0"
edition = "2018"

[profile.release]
opt-level = 3
lto = "fat"
debug = 2

[dependencies]

[dev-dependencies]
criterion = "0.3"
chrono = "0.4.19"
rand = "0.8"

[[bench]]
name = "bench_format"
harness = false

[[bench]]
name = "bench_parse"
harness = false

[[bench]]
name = "bench_date_trunc"
harness = false