[package]
name = "packedtime-rs"
description = "Utilities for efficiently storing, parsing, formatting and truncating timestamps"
authors = ["Jörn Horstmann <git@jhorstmann.net>"]
version = "0.2.4"
edition = "2021"

repository = "https://github.com/jhorstmann/packedtime-rs"

# contains date conversion code ported from
# https://github.com/ThreeTen/threetenbp/blob/master/src/main/java/org/threeten/bp/LocalDate.java
# the orignal java code is under BSD license
license = "Apache-2.0 OR BSD-3-Clause"

categories = ["date-and-time", "value-formatting"]
keywords = ["date", "time", "simd"]

exclude = [".github", ".cargo", "rust-toolchain"]

[profile.release]
opt-level = 3
lto = "fat"
debug = 2

[features]
default = []
expensive_tests = []

[dependencies]

[dev-dependencies]
criterion = "0.3"
chrono = "0.4.19"
chronoutil = "0.2.3"
time = {version = "0.3.11", features = ["parsing"]}
rand = "0.8"

[[bench]]
name = "bench_format"
harness = false

[[bench]]
name = "bench_parse"
harness = false

[[bench]]
name = "bench_date_trunc"
harness = false

[[bench]]
name = "bench_date_add"
harness = false